--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Us-Taraji</title>
     <link rel="stylesheet" href="css/about.css">
+    <link rel="icon" href="image/favres.png">
 
 
 </head>
