--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,8 @@
     <title>Menu-Taraji</title>
     <link rel="stylesheet" href="css/menu.css">
 
+     <link rel="icon" href="image/favres.png">
+
 
 </head>
 <body>
